@@ -4,7 +4,7 @@
 bgzip \- Block compression/decompression utility
 .\"
 .\" Copyright (C) 2009-2011 Broad Institute.
-.\" Copyright (C) 2018 Genome Research Limited.
+.\" Copyright (C) 2018, 2021 Genome Research Limited.
 .\"
 .\" Author: Heng Li <lh3@sanger.ac.uk>
 .\"
@@ -43,7 +43,7 @@ bgzip \- Block compression/decompression utility
 .SH SYNOPSIS
 .PP
 .B bgzip
-.RB [ -cdfhir ]
+.RB [ -cdfhikrt ]
 .RB [ -b
 .IR virtualOffset ]
 .RB [ -I
@@ -90,6 +90,13 @@ Overwrite files without asking, or decompress files that don't have a known
 compression filename extension (e.g., \fI.gz\fR) without asking.
 Use \fB--force\fR twice to do both without asking.
 .TP
+.B "-g, --rebgzip"
+Try to use an existing index to create a compressed file with matching
+block offsets.
+Note that this assumes that the same compression library and level are in use
+as when making the original file.
+Don't use it unless you know what you're doing.
+.TP
 .B "-h, --help"
 Displays a help message.
 .TP
@@ -101,6 +108,9 @@ file with .gzi appended to it.
 .BI "-I, --index-name " FILE
 Index file name.
 .TP
+.B "-k, --keep"
+Do not delete input file during operation.
+.TP
 .BI "-l, --compress-level " INT
 Compression level to use when compressing.
 From 0 to 9, or -1 for the default level set by the compression library. [-1]
@@ -108,16 +118,12 @@ From 0 to 9, or -1 for the default level set by the compression library. [-1]
 .B "-r, --reindex"
 Rebuild the index on an existing compressed file.
 .TP
-.B "-g, --rebgzip"
-Try to use an existing index to create a compressed file with matching
-block offsets.
-Note that this assumes that the same compression library and level are in use
-as when making the original file.
-Don't use it unless you know what you're doing.
-.TP
 .BI "-s, --size " INT
 Decompress INT bytes (uncompressed size) to standard output.
 Implies -c.
+.TP
+.B "-t, --test"
+Test the intregrity of the compressed file.
 .TP
 .BI "-@, --threads " INT
 Number of threads to use [1].
