@@ -4,6 +4,9 @@ Noteworthy changes in release a.b
 * New API function hts_flush()/sam_flush()/bcf_flush() for flushing output
   htsFile/samFile/vcfFile streams. (PR #1326, thanks to John Marshall)
 
+* Added a keep option to bgzip to leave the original file untouched.  This
+  brings bgzip into line with gzip. (PR #1331, thanks to Alex Petty).
+
 
 Noteworthy changes in release 1.13 (7th July 2021)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
